--- a/post.Rmd
+++ b/post.Rmd
@@ -18,6 +18,8 @@ output:
 
 Your post below, the metadata above.
 
+Oh apparently I need to add a sentence.
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE,
                       fig.path = "images/")
